# python-interface-swift-package-lib

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  pyproject.toml  requirements_dev.txt
examples/: callback_example.py  parallel_example.py  sum_example.py
lib/: Package.swift
lib/Sources/ParallelSum/: ParallelSum.cpp  ParallelSum.h
python/parallel_sum/: __init__.py  parallel_sum.cpp
